--- a/mytemplates/contestpage.html
+++ b/mytemplates/contestpage.html
@@ -86,10 +86,10 @@
 
       <div class="subscribe">
         <h4>Find a team to join this contest!</h4>
-        <form method="post">
+        <form method="post" action="/user/teamlist/contest_id={{contest.id}}">
           <div class="subscribe-form">
             <!--input name of team? maybe deleted-->
-            <input type="team" name="" placeholder="Guess a Name?">
+            <input type="team" name="keyword" placeholder="Keyword">
             <input type="submit" value="Search!">
           </div>
         </form>
