--- a/mytemplates/contestpage.html
+++ b/mytemplates/contestpage.html
@@ -94,6 +94,15 @@
           </div>
         </form>
       </div>
+
+        <div class="subscribe">
+            <h4><br>Counl not find a desired team? </h4>
+            <form>
+            <!--input name of team? maybe deleted-->
+                <input type="button" value="Just Follow >_<!" style="background: red; color: white;font-size: 16px;padding: 0 20px;border: 0;height: 60px">
+            </form>
+      </div>
+
     </div>
   </header><!-- End #header -->
 
